--- a/InterpretBank/InterpretBank/TermbaseViewer/UI/Controls/EditBox.xaml
+++ b/InterpretBank/InterpretBank/TermbaseViewer/UI/Controls/EditBox.xaml
@@ -3,16 +3,34 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:converters="clr-namespace:InterpretBank.TermbaseViewer.UI.Converters"
+             xmlns:platformConverters="clr-namespace:Sdl.Desktop.Platform.Controls.Converters;assembly=Sdl.Desktop.Platform.Controls"
              mc:Ignorable="d"
              x:Name="EditBoxControl"
              HorizontalAlignment="Left"
              d:DesignHeight="450"
              d:DesignWidth="800">
+
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/buttonresources.xaml" />
+                <ResourceDictionary Source="/InterpretBank;component/TermbaseViewer/UI/Resources/EditButtonTemplate.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <converters:BoolToColorConverter x:Key="BoolToColorConverter" />
+            <platformConverters:InverseBooleanToVisibilityConverter x:Key="InvertBoolToVisConverter" />
+            <BooleanToVisibilityConverter x:Key="BoolToVisConverter" />
+            <Style TargetType="Button">
+                <Setter Property="Template"
+                        Value="{StaticResource EditButtonTemplate}" />
+            </Style>
+            
+            <Style x:Key="DialogButtonsStyle" TargetType="Button">
+                <Setter Property="Template"
+                        Value="{StaticResource EditButtonTemplate}" />
+                <Setter Property="Background" Value="{Binding ElementName=EditBoxControl, Path=IsEditing, Converter={StaticResource BoolToColorConverter}, ConverterParameter=LightGray}"/>
+                <Setter Property="BorderBrush" Value="{Binding ElementName=EditBoxControl, Path=IsEditing, Converter={StaticResource BoolToColorConverter}, ConverterParameter=LightGray}"/>
+                <Setter Property="Visibility" Value="{Binding ElementName=EditBoxControl, Path=IsEditing, Converter={StaticResource BoolToVisConverter}}"/>
+            </Style>
         </ResourceDictionary>
     </UserControl.Resources>
     <Border BorderThickness="1">
@@ -31,7 +49,14 @@
             </Style>
         </Border.Style>
 
-        <Grid x:Name="EditBoxGrid">
+        <Grid x:Name="EditBoxGrid"
+              KeyboardNavigation.TabNavigation="Once">
+            <Grid.InputBindings>
+                <KeyBinding Key="Enter"
+                            Modifiers="Alt"
+                            CommandParameter="ConfirmEdit"
+                            Command="{Binding KeyboardKeypressCommand, ElementName=EditBoxControl}" />
+            </Grid.InputBindings>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="2*" />
@@ -43,31 +68,42 @@
 
             <TextBox x:Name="TextBox"
                      Grid.Column="1"
-                     BorderThickness="0"
+                     BorderThickness="1"
+                     GotFocus="TextBox_OnGotFocus"
+                     BorderBrush="{Binding IsEditing, ElementName=EditBoxControl, Converter={StaticResource BoolToColorConverter}}"
                      MinWidth="40"
                      TextWrapping="Wrap"
                      AcceptsReturn="True"
                      VerticalScrollBarVisibility="Auto"
-                     Text="{Binding EditBoxText, ElementName=EditBoxControl}"
-                     BorderBrush="Transparent" />
+                     Text="{Binding EditBoxText, ElementName=EditBoxControl}" />
 
-            <Image Grid.Column="2"
-                   Source="../../../Resources/EditIcon.ico"
-                   Height="15">
-                <Image.Style>
-                    <Style TargetType="{x:Type Image}">
-                        <Setter Property="Visibility"
-                                Value="Collapsed" />
-                        <Style.Triggers>
-                            <DataTrigger Binding="{Binding IsMouseOver, ElementName=EditBoxControl}"
-                                         Value="True">
-                                <Setter Property="Visibility"
-                                        Value="Visible" />
-                            </DataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </Image.Style>
-            </Image>
+            <StackPanel Grid.Column="2"
+                        Orientation="Horizontal">
+
+                <Button Width="50"
+                        Style="{StaticResource DialogButtonsStyle}"
+                        CommandParameter="{Binding ElementName=EditBoxControl, Path=SaveEditCommandParameter}"
+                        Click="ConfirmEditButton_Click">
+
+                    <Image Source="/InterpretBank;component/Resources/ConfirmEdit.png"
+                           Height="10" />
+                </Button>
+                <Button Style="{StaticResource DialogButtonsStyle}"
+                        Width="50"
+                        Click="RejectEditButton_OnClick">
+                    <Image Source=" /InterpretBank;component/Resources/RejectEdit.png"
+                           Height="10" />
+                </Button>
+            </StackPanel>
+
+            <Button Background="Transparent"
+                    BorderBrush="Transparent"
+                    Click="EditButton_Click"
+                    Visibility="{Binding IsEditing,ElementName=EditBoxControl, Converter={StaticResource InvertBoolToVisConverter}}"
+                    Grid.Column="2">
+                <Image Source="/InterpretBank;component/Resources/Edit.png"
+                       Height="10" />
+            </Button>
         </Grid>
     </Border>
 </UserControl>
