--- a/InterpretBank/InterpretBank/TermbaseViewer/UI/Resources/TermbaseViewerResources.xaml
+++ b/InterpretBank/InterpretBank/TermbaseViewer/UI/Resources/TermbaseViewerResources.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="TermListViewStyle"
            TargetType="{x:Type ListViewItem}">
+        <Setter Property="KeyboardNavigation.IsTabStop" Value="False"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListViewItem}">
