--- a/InterpretBank/InterpretBank/TermbaseViewer/UI/Controls/EditBox.xaml
+++ b/InterpretBank/InterpretBank/TermbaseViewer/UI/Controls/EditBox.xaml
@@ -6,6 +6,7 @@
              xmlns:converters="clr-namespace:InterpretBank.TermbaseViewer.UI.Converters"
              xmlns:platformConverters="clr-namespace:Sdl.Desktop.Platform.Controls.Converters;assembly=Sdl.Desktop.Platform.Controls"
              mc:Ignorable="d"
+             Focusable="True"
              x:Name="EditBoxControl"
              HorizontalAlignment="Left"
              d:DesignHeight="450"
@@ -25,17 +26,24 @@
             </Style>
 
             <converters:OrBoolToVisibilityConverter  x:Key="MultipleBoolToVisConverter" />
-            <Style x:Key="DialogButtonsStyle" TargetType="Button">
+            <Style x:Key="DialogButtonsStyle"
+                   TargetType="Button">
                 <Setter Property="Template"
                         Value="{StaticResource EditButtonTemplate}" />
-                <Setter Property="Background" Value="{Binding ElementName=EditBoxControl, Path=IsEditing, Converter={StaticResource BoolToColorConverter}, ConverterParameter=LightGray}"/>
-                <Setter Property="BorderBrush" Value="{Binding ElementName=EditBoxControl, Path=IsEditing, Converter={StaticResource BoolToColorConverter}, ConverterParameter=LightGray}"/>
-                <!--<Setter Property="Visibility" Value="{Binding ElementName=EditBoxControl, Path=IsEditing, Converter={StaticResource BoolToVisConverter}}"/>-->
+                <Setter Property="Focusable"
+                        Value="False" />
+                <Setter Property="Background"
+                        Value="{Binding ElementName=EditBoxControl, Path=IsEditing, Converter={StaticResource BoolToColorConverter}, ConverterParameter=LightGray}" />
+                <Setter Property="BorderBrush"
+                        Value="{Binding ElementName=EditBoxControl, Path=IsEditing, Converter={StaticResource BoolToColorConverter}, ConverterParameter=LightGray}" />
+                <!--<Setter Property="Visibility" Value="{Binding ElementName=EditBoxControl, Path=IsEditing, Converter={StaticResource BoolToVisConverter}}" />-->
                 <Setter Property="Visibility">
                     <Setter.Value>
                         <MultiBinding Converter="{StaticResource MultipleBoolToVisConverter}">
-                            <Binding Path="IsEditing" ElementName="EditBoxControl" />
-                            <Binding Path="IsFocused" RelativeSource="{RelativeSource Self}"/>
+                            <Binding Path="IsEditing"
+                                     ElementName="EditBoxControl" />
+                            <Binding Path="IsFocused"
+                                     RelativeSource="{RelativeSource Self}" />
                         </MultiBinding>
                     </Setter.Value>
                 </Setter>
@@ -59,12 +67,18 @@
         </Border.Style>
 
         <Grid x:Name="EditBoxGrid"
-              KeyboardNavigation.TabNavigation="Once">
+              Focusable="True">
             <Grid.InputBindings>
                 <KeyBinding Key="Enter"
                             Modifiers="Alt"
                             CommandParameter="ConfirmEdit"
                             Command="{Binding KeyboardKeypressCommand, ElementName=EditBoxControl}" />
+                <KeyBinding Key="Enter"
+                            CommandParameter="EnterEdit"
+                            Command="{Binding KeyboardKeypressCommand, ElementName=EditBoxControl}" />
+                <KeyBinding Key="Escape"
+                            CommandParameter="RejectEdit"
+                            Command="{Binding ElementName=EditBoxControl, Path=KeyboardKeypressCommand}" />
             </Grid.InputBindings>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
@@ -78,35 +92,43 @@
             <TextBox x:Name="TextBox"
                      Grid.Column="1"
                      BorderThickness="1"
+                     IsEnabled="{Binding IsEditing, ElementName=EditBoxControl}"
                      GotFocus="TextBox_OnGotFocus"
+                     LostFocus="TextBox_OnLostFocus"
                      BorderBrush="{Binding IsEditing, ElementName=EditBoxControl, Converter={StaticResource BoolToColorConverter}}"
                      MinWidth="40"
                      TextWrapping="Wrap"
                      AcceptsReturn="True"
                      VerticalScrollBarVisibility="Auto"
-                     Text="{Binding EditBoxText, ElementName=EditBoxControl}" />
+                     Text="{Binding EditBoxText, ElementName=EditBoxControl, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
             <StackPanel Grid.Column="2"
                         Orientation="Horizontal">
 
                 <Button Width="50"
+                        Focusable="False"
                         Style="{StaticResource DialogButtonsStyle}"
                         CommandParameter="{Binding ElementName=EditBoxControl, Path=SaveEditCommandParameter}"
                         Click="ConfirmEditButton_Click">
 
                     <Image Source="/InterpretBank;component/Resources/ConfirmEdit.png"
+                           Focusable="False"
                            Height="10" />
                 </Button>
                 <Button Style="{StaticResource DialogButtonsStyle}"
                         Width="50"
+                        Focusable="False"
                         Click="RejectEditButton_OnClick">
+
                     <Image Source=" /InterpretBank;component/Resources/RejectEdit.png"
+                           Focusable="False"
                            Height="10" />
                 </Button>
             </StackPanel>
 
             <Button Background="Transparent"
                     BorderBrush="Transparent"
+                    Focusable="False"
                     Click="EditButton_Click"
                     Visibility="{Binding IsEditing,ElementName=EditBoxControl, Converter={StaticResource InvertBoolToVisConverter}}"
                     Grid.Column="2">
