--- a/InterpretBank/InterpretBank/TermbaseViewer/UI/Resources/TermbaseViewerResources.xaml
+++ b/InterpretBank/InterpretBank/TermbaseViewer/UI/Resources/TermbaseViewerResources.xaml
@@ -2,7 +2,11 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="TermListViewStyle"
            TargetType="{x:Type ListViewItem}">
-        <Setter Property="KeyboardNavigation.IsTabStop" Value="False"/>
+        <!--<Setter Property="KeyboardNavigation.IsTabStop" Value="False"/>-->
+        <Setter Property="Focusable"
+                Value="True" />
+
+
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListViewItem}">
@@ -53,9 +57,12 @@
                             <Setter Property="Background"
                                     TargetName="Bd"
                                     Value="Transparent" />
-                            <Setter Property="BorderBrush"
+                            <!--<Setter Property="BorderBrush"
                                     TargetName="Bd"
-                                    Value="Black" />
+                                    Value="Red" />-->
+                            <Setter Property="BorderThickness"
+                                    TargetName="Bd"
+                                    Value="2" />
                         </MultiTrigger>
                         <Trigger Property="IsEnabled"
                                  Value="False">
@@ -68,4 +75,22 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+
+    <!--<Style x:Key="TermsDataGrid_ListViewItem_FocusVisualStyle"
+           TargetType="{x:Type ListViewItem}">
+        <Style.Triggers>
+            <Trigger Property="IsSelected"
+                     Value="True">
+                <Setter Property="BorderBrush"
+                        Value="Violet" />
+                <Setter Property="Background"
+                        Value="Violet" />
+
+                <Setter Property="BorderThickness"
+                        Value="4" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>-->
+
 </ResourceDictionary>
